kubernetes/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver
  type: LoadBalancer
  ports:
  - name: "go-server"
    port: 80
    targetPort: 5000
    protocol: TCP
    # nodePort: 30001 # 30000 - 32767 # type: NodePort
